# punchcard

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cli-design.md  cliff.toml  list_runs.tmpl  repo-list.csv  run.sh
.github/workflows/: push-trunk.yml  push.yml
crates/generators/: Cargo.toml
crates/generators/src/: lib.rs
src/: lib.rs  main.rs  spec.rs
src/bindings/: concurrency.rs  defaults.rs  environment.rs  events.rs  jobs.rs  matrix.rs  mod.rs  one_or.rs  permissions.rs  steps.rs  workflow.rs
src/cmd/: init.rs  mod.rs
src/config/: mod.rs
src/lints/: mod.rs
src/reader/: mod.rs
src/utils/: mod.rs  project_root.rs
tests/acceptance/: events.rs  main.rs  workflow.rs
tests/data/events/: branch1.yml  check_run1.yml  check_suite1.yml  create1.yml  deployment1.yml  deployment_status.yml  discussion.yml  discussion_comment.yml  fork.yml  gollum.yml  issue_comment.yml  issues.yml
tests/data/examples/: simple.yml  type-error.yml
tests/data/workflow/: basic1.yml
