[package]
name = "punchcard"
version = "0.1.0"
authors = ["Robbie McKinstry <thesnowmancometh@gmail.com>"]
edition = "2021"

[lib]
name = "punchcard"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo", "color"] }
pretty_assertions = "1.3.0"
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.9"
