[package]
name = "punchcard"
version = "0.1.0"
authors = ["Robbie McKinstry <thesnowmancometh@gmail.com>"]
edition = "2021"

[[bin]]
name = "punchcard"
path = "src/bin/main.rs"

[lib]
name = "punchcard"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo", "color"] }
log = "0.4.17"
pretty_assertions = "1.3.0"
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.9"
fern = { version = "0.6", features = ["colored"] }
emojis = "0.5.2"
