[package]
name = "punchcard"
version = "0.1.0"
authors = ["Robbie McKinstry <thesnowmancometh@gmail.com>"]
edition = "2021"
description = "Punchcard is a dev tool for correct and convenient GitHub Actions."
license = "MIT"
repository = "github.com/PLSysSec/punchcard"
keywords = ["github", "actions", "ci", "cd", "cicd"]
categories = ["development-tools"]

[[bin]]
name = "punchcard"
path = "src/bin/main.rs"

[lib]
name = "punchcard"
path = "src/lib.rs"

[dependencies]
github_generators = { path = "crates/generators" }
clap = { version = "4.1.1", features = ["derive", "cargo", "color"] }
emojis = "0.5.2"
fern = { version = "0.6", features = ["colored"] }
log = "0.4.17"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"